--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,18 @@
 
 :root {
     --site-bg: url("/black-flowertile.png");
-    --accent-color: #9b59b6;
-    --select-color: #d7a8e4;
-    --link-color: #8e44ad;
-    --bg-color: #f4e1f3;
-    --text-color: #5a5a5a;
-    --bg-color2: #fff;
-    --border-color: #d9b0d1;
-    --special-text-color: #8e44ad;
+    --accent-color: #5A3A6B;
+    --select-color: #6A1B3D;
+    --link-color: #E8D4E3;
+    --bg-color: #3F1F38;
+    --text-color: #E8D4E3;
+    --bg-color2: #2E1429;
+    --border-color: #4A2A3D;
+    --special-text-color: #D8A7CA;
     --post-header-color: white;
-    --post-shadow-color: #d7a8e480;
-    --outline-color: #d7a8e4;
-    --outline-color2: #f4e1f3;
+    --post-shadow-color: #4A2A3DCC;
+    --outline-color: #2E1429;
+    --outline-color2: #5A3A6B;
     --list-style-type: "<no value>";
     --list-style-image: url("/flower.png");
 }
