--- a/public/index.html
+++ b/public/index.html
@@ -497,10 +497,7 @@ header h1 a:hover {
                 @holla <span class="timestamp">25/02/2025</span>
             </div>
             <p><h3 id="用-ffmpeg-做-gif從簡單搞到高級上">用 FFmpeg 做 GIF：從簡單搞到高級上</h3>
-<p>終於開 Blog 了，總得寫點什麼吧！最近玩了 FFmpeg，把影片變 GIF，發現還挺好玩的。從簡單到高級用法我都試了，乾脆分享出來，給自己一點成就感（<del>拖延症終於有點成果</del>）</p>
-<hr>
-<h4 id="隨便搞個-gif簡單快狠">隨便搞個 GIF：簡單快狠</h4>
-<p>想隨手做個 GIF 傳給朋友炫耀一下？超簡單，用這招就行：（只是範例，根據個人需要再調整）</p></p>
+<p>終於開 Blog 了，總得寫點什麼吧！最近玩了 FFmpeg，把影片變 GIF，發現還挺好玩的。從簡單到高級用法我都試了，乾脆分享出來，給自己一點成就感（<del>拖延症終於有點成果</del>）</p></p>
             
             <div class="post-content readmore">
                 
